--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".CityActivity"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <!--<activity-->
+            <!--android:name=".CityActivity"-->
+            <!--android:label="@string/title_activity_main2"-->
+            <!--android:theme="@style/AppTheme.NoActionBar" />-->
         <activity android:name=".ProvinceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
